--- a/css/main.css
+++ b/css/main.css
@@ -1768,7 +1768,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #5bffff;
+  background: #74cdbf;
 }
 .feed-link,
 .chat {
